Corrige configuração do Netlify

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,4 @@
 [[redirects]]
-  from = "/.netlify/functions/*"
-  to = "/functions/:splat"
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
   status = 200
-  force = true
