--- a/netlify/functions/tsconfig.functions.json
+++ b/netlify/functions/tsconfig.functions.json
@@ -1,20 +1,15 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "ES6",
-    "module": "commonjs",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "outDir": "./dist",
+    "target": "ES2020",
+    "module": "CommonJS",
     "moduleResolution": "node",
+    "outDir": "./dist",
+    "strict": true,
+    "noEmitOnError": true,
     "resolveJsonModule": true,
-    "noEmitOnError": true
+    "types": ["@netlify/functions"]
   },
-  "include": [
-    "netlify/functions/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["**/*.ts"],
+  "exclude": ["node_modules", "dist", "tests"]
 }
