--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,19 @@
-# netlify.toml
-
 [build]
   command = "npm run build && [ -d src/supabase ] && cp -r src/supabase netlify/functions/dist/supabase || echo '📂 Pasta src/supabase não encontrada, pulando cópia...'"
   publish = "dist"
   functions = "netlify/functions"
 
-
 [functions]
   directory = "netlify/functions"
 
+# Redirecionamento para funções Netlify (API)
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/:splat"
+  status = 200
+
+# Redirecionamento para SPA (React Router)
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
   status = 200
